# spectral-gate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_test.yml
cmake/: arm-none-eabi.cmake
data/: generate_physics.py  model_weights.h
src/: main.cpp
src/core/: decision.cpp  decision.h  inference.cpp  inference.h  spectral.cpp  spectral.h
src/hal/: hal_interface.h  hal_mock.cpp  hal_mock.h  hal_stm32.cpp
tests/: CMakeLists.txt  test_main.cpp
